fixed scrollbar

--- a/static/index.css
+++ b/static/index.css
@@ -88,6 +88,7 @@ html, body {
     left: 41px;
     right: 61px;
     height: 100px;
+    min-width: 0;
     overflow-x: none;
     overflow-y: scroll;
 }
